# nordeus-de-challenge

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: load-ci.yml
.github/workflows/: load-ci.yml
data/curated/match/: .part-00000-bea4e8ae-7d59-4265-9b30-2b2d26a0e44c-c000.snappy.parquet.crc  part-00000-bea4e8ae-7d59-4265-9b30-2b2d26a0e44c-c000.snappy.parquet
data/curated/registration/: .part-00000-7924e65d-92df-4f65-ba61-850324b9cd1f-c000.snappy.parquet.crc  part-00000-7924e65d-92df-4f65-ba61-850324b9cd1f-c000.snappy.parquet
data/curated/session_ping/: .part-00000-778952ad-3047-4b35-b277-d4b31348e4c8-c000.snappy.parquet.crc  .part-00000-eaf12ce5-84e3-4b2d-b0d3-bbc05d4c3144-c000.snappy.parquet.crc  part-00000-778952ad-3047-4b35-b277-d4b31348e4c8-c000.snappy.parquet  part-00000-eaf12ce5-84e3-4b2d-b0d3-bbc05d4c3144-c000.snappy.parquet
solution/etl/load/: pyproject.toml
solution/etl/load/load/: aggregator.py  analyzer.py  constants.py  db_client.py  joiner.py  main.py  paths.py  schema.py  utils.py
solution/etl/load/tests/: data.py  test_analyzer.py  test_joiner.py
solution/etl/transformation/: pyproject.toml
solution/etl/transformation/transformation/: common.py  main.py  paths.py  processor.py  schema.py
solution/infrastructure/: docker-compose.yml  init.sql
solution/infrastructure/superset/: dockerfile  superset-init.sh
solution/nordeus_cli/: README.md  pyproject.toml
solution/nordeus_cli/nordeus_cli/: cli.py  constants.py  db_client.py  query_generator.py  utils.py
