[tool.poetry]
name = "solution"
version = "0.0.1"
description = "Nordeus Data Engineering Challenge Solution"
authors = [
    "Bojan Radovic <rbojan2000@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
black = "^23.11.0"
pylint = "^3.0.2"
pre-commit = "^3.5.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
