[tool.poetry]
name = "nordeus-cli"
version = "0.1.0"
description = ""
authors = ["Bojan Radovic <rbojan2000@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nordeus-cli = "nordeus_cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
tabulate = "^0.9.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
