[tool.poetry]
name = "load"
version = "0.1.0"
description = ""
authors = ["Bojan Radovic <rbojan2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.5.3"
click = "^8.1.7"
pytest = "^8.3.3"
pyspark-test = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
